# auth-center

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  route.rs  util.rs
src/ctl/: department_ctl.rs  department_role_ref_ctl.rs  group_ctl.rs  group_role_ref_ctl.rs  mod.rs  organization_ctl.rs  organization_role_ref_ctl.rs  permission_ctl.rs  position_ctl.rs  position_role_ref_ctl.rs  role_ctl.rs  system_config_ctl.rs  user_ctl.rs  user_group_ref_ctl.rs  user_info_ctl.rs  user_role_ref_ctl.rs  user_wechat_info_ctl.rs
src/entities/: department.rs  department_role_ref.rs  group.rs  group_role_ref.rs  mod.rs  organization.rs  organization_role_ref.rs  permission.rs  position.rs  position_role_ref.rs  prelude.rs  role.rs  system_config.rs  user.rs  user_group_ref.rs  user_info.rs  user_role_ref.rs  user_wechat_info.rs
src/mapper/: department_mapper.rs  department_role_ref_mapper.rs  group_mapper.rs  group_role_ref_mapper.rs  mod.rs  organization_mapper.rs  organization_role_ref_mapper.rs  permission_mapper.rs  position_mapper.rs  position_role_ref_mapper.rs  role_mapper.rs  system_config_mapper.rs  user_group_ref_mapper.rs  user_info_mapper.rs  user_mapper.rs  user_role_ref_mapper.rs  user_wechat_info_mapper.rs
src/pojo/: department_pojo.rs  department_role_ref_pojo.rs  group_pojo.rs  group_role_ref_pojo.rs  mod.rs  organization_pojo.rs  organization_role_ref_pojo.rs  permission_pojo.rs  position_pojo.rs  position_role_ref_pojo.rs  role_pojo.rs  system_config_pojo.rs  user_group_ref_pojo.rs  user_info_pojo.rs  user_pojo.rs  user_role_ref_pojo.rs  (+1 more)
(+17 files in other folders)
