[package]
name = "auth_center"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.5"
rand = "0.8.5"
sea-orm = { version = "1.0.1", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros","debug-print" ] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.34.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.38"
anyhow = "1.0.91"
async-trait = "0.1.77"
once_cell = "1.21.3"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "./Dockerfile"
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:0.2.5-custom"
